# raytracer

./: .gitignore  CMakeLists.txt  build_run.sh  render
src/: main.cpp
src/geometricobjects/: geometricobject.cpp  geometricobject.h  plane.cpp  plane.h  sphere.cpp  sphere.h
src/tracers/: multipleobjects.cpp  multipleobjects.h  singlesphere.cpp  singlesphere.h  tracer.cpp  tracer.h
src/utility/: constants.h  normal.cpp  normal.h  point3d.cpp  point3d.h  ray.cpp  ray.h  rgbcolour.cpp  rgbcolour.h  shaderec.cpp  shaderec.h  vector3d.cpp  vector3d.h
src/world/: viewplane.cpp  viewplane.h  world.cpp  world.h
